# adaptagrams

./: README.md
cola/: CMakeLists.txt
cola/libavoid/: assertions.h
cola/libcola/: colafd.cpp  output_svg.h  straightener.h
cola/libvpsc/: rectangle.h  vpsc_export.h
